--- a/frontend/public/css/inicio.css
+++ b/frontend/public/css/inicio.css
@@ -346,7 +346,10 @@
     justify-content: flex-start;
     width: 100%;
     img, picture {
-        width: auto;
+        width: 70px;
+        height: 70px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
     }
 }
 
@@ -493,6 +496,13 @@
         padding: 20px;
         border-radius: 20px;
         min-width: 430px;
+    }
+
+    .testimonio > div:last-child{
+        img, picture {
+            width: 60px;
+            height: 60px;
+        }
     }
 
 }
